--- a/angry-surgeon-core/Cargo.toml
+++ b/angry-surgeon-core/Cargo.toml
@@ -9,3 +9,6 @@ heapless = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_arrays = "0.2.0"
 tinyrand = "0.5.0"
+
+[features]
+std = ["embedded-io-async/std"]
