--- a/angry-surgeon-core/Cargo.toml
+++ b/angry-surgeon-core/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 [dependencies]
 embedded-io-async = "0.6.1"
 heapless = { version = "0.8.0", features = ["serde"] }
-serde = { version = "1.0.219", features = ["derive"] }
+micromath = { version = "2.1.0", features = ["num-traits"] }
+serde = { version = "1.0.219", default-features = false, features = ["derive"] }
 serde_arrays = "0.2.0"
 tinyrand = "0.5.0"
 
