--- a/angry-surgeon-daisy/.cargo/config.toml
+++ b/angry-surgeon-daisy/.cargo/config.toml
@@ -11,3 +11,7 @@ target = "thumbv7em-none-eabihf"
 
 [env]
 DEFMT_LOG = "trace"
+
+[unstable]
+build-std = ["core"]
+build-std-features = ["panic_immediate_abort"]
