--- a/angry-surgeon-daisy/.cargo/config.toml
+++ b/angry-surgeon-daisy/.cargo/config.toml
@@ -2,8 +2,8 @@
 runner = 'probe-rs run --chip STM32H750IBKx'
 rustflags = [
   "-C", "link-arg=--nmagic",
-  "-C", "link-arg=-Tlink.x",
-  "-C", "link-arg=-Tdefmt.x",
+  "-C", "link-arg=-Tmy-link.x",
+  "-C", "link-arg=--print-memory-usage",
 ]
 
 [build]
