--- a/angry-surgeon-daisy/Cargo.toml
+++ b/angry-surgeon-daisy/Cargo.toml
@@ -10,27 +10,25 @@ cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7.5"
 critical-section = "1.2.0"
 
-defmt = "1.0.1"
-defmt-rtt = "1.0.0"
+panic-halt = "1.0.0"
 
 block-device-adapters = "0.2.0"
 block-device-driver = "0.2.0"
+embedded-alloc = "0.6.0"
+embedded-graphics = "0.8.1"
 embedded-hal = "1.0.0"
 embedded-hal-async = "1.0.0"
 embedded-hal-bus = { version = "0.3.0", features = ["async"] }
 embedded-io-async = "0.6.1"
 grounded = "0.2.0"
 heapless = "0.8.0"
+ibm437 = { version = "0.3.3", default-features = false, features = ["regular8x8"] }
 micromath = { version = "2.1.0", features = ["num-traits"] }
-panic-probe = { version = "1.0.0", features = ["print-defmt"] }
 postcard = { version = "1.1.1", features = ["alloc"] }
 serde = { version = "1.0.219", default-features = false }
 ssd1306 = { version = "0.10.0", features = ["async"] }
 static_cell = "2.1.0"
 tinyrand = "0.5.0"
-embedded-alloc = "0.6.0"
-embedded-graphics = "0.8.1"
-ibm437 = { version = "0.3.3", default-features = false, features = ["regular8x8"] }
 
 # tell rust-analyzer not to expect test crate
 [[bin]]
@@ -46,40 +44,41 @@ default-features = false
 features = ["lfn"]
 
 [dependencies.embassy-stm32]
-# path = "../embassy/embassy-stm32"
-git = "https://github.com/embassy-rs/embassy"
-features = ["stm32h750ib", "time-driver-tim5", "exti", "memory-x", "unstable-pac"]
+path = "../embassy/embassy-stm32"
+# git = "https://github.com/embassy-rs/embassy"
+features = ["stm32h750ib", "time-driver-tim5", "exti", "unstable-pac"]
 
 [dependencies.embassy-sync]
-# path = "../embassy/embassy-sync"
-git = "https://github.com/embassy-rs/embassy"
+path = "../embassy/embassy-sync"
+# git = "https://github.com/embassy-rs/embassy"
 
 [dependencies.embassy-embedded-hal]
-# path = "../embassy/embassy-embedded-hal"
-git = "https://github.com/embassy-rs/embassy"
+path = "../embassy/embassy-embedded-hal"
+# git = "https://github.com/embassy-rs/embassy"
 
 [dependencies.embassy-executor]
-# path = "../embassy/embassy-executor"
-git = "https://github.com/embassy-rs/embassy"
+path = "../embassy/embassy-executor"
+# git = "https://github.com/embassy-rs/embassy"
 features = ["arch-cortex-m", "executor-thread", "executor-interrupt"]
 
 [dependencies.embassy-time]
-# path = "../embassy/embassy-time"
-git = "https://github.com/embassy-rs/embassy"
-features = ["defmt-timestamp-uptime"] # default 1 MHz tick
-# features = ["defmt-timestamp-uptime", "tick-hz-32_768"]
+path = "../embassy/embassy-time"
+# git = "https://github.com/embassy-rs/embassy"
+# features = ["tick-hz-32_768"]
 
 [dependencies.embassy-usb]
-# path = "../embassy/embassy-usb"
-git = "https://github.com/embassy-rs/embassy"
+path = "../embassy/embassy-usb"
+# git = "https://github.com/embassy-rs/embassy"
 
 [dependencies.embassy-futures]
-# path = "../embassy/embassy-futures"
-git = "https://github.com/embassy-rs/embassy"
+path = "../embassy/embassy-futures"
+# git = "https://github.com/embassy-rs/embassy"
 
 [profile.release]
-lto = "fat"
+strip = true
+lto = true
 opt-level = "s"
 incremental = false
 codegen-units = 1
-debug = true
+debug = false
+panic = "abort"
