--- a/angry-surgeon-core/Cargo.toml
+++ b/angry-surgeon-core/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-embedded-io-async = "0.6.1"
+embedded-io = "0.6.1"
+# embedded-io-async = "0.6.1"
 heapless = { version = "0.8.0", features = ["serde"] }
 micromath = { version = "2.1.0", features = ["num-traits"] }
 serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
@@ -12,4 +13,5 @@ serde_arrays = "0.2.0"
 tinyrand = "0.5.0"
 
 [features]
-std = ["embedded-io-async/std"]
+std = ["embedded-io/std"]
+# std = ["embedded-io-async/std"]
