--- a/angry-surgeon-daisy/Cargo.toml
+++ b/angry-surgeon-daisy/Cargo.toml
@@ -1,83 +1,39 @@
 [package]
 name = "angry-surgeon-daisy"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 angry-surgeon-core = { path = "../angry-surgeon-core" }
 
 cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
-cortex-m-rt = "0.7.5"
-critical-section = "1.2.0"
+cortex-m-rt = { version = "0.7.5", features = ["set-vtor"] }
+embassy-futures = "0.1.1"
 
-panic-halt = "1.0.0"
-
-block-device-adapters = "0.2.0"
-block-device-driver = "0.2.0"
 embedded-alloc = "0.6.0"
-embedded-graphics = "0.8.1"
 embedded-hal = "1.0.0"
+embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
 embedded-hal-async = "1.0.0"
-embedded-hal-bus = { version = "0.3.0", features = ["async"] }
-embedded-io-async = "0.6.1"
+embedded-io = "0.6.1"
+embedded-sdmmc = { version = "0.9.0", default-features = false }
+futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
 grounded = "0.2.0"
 heapless = "0.8.0"
-ibm437 = { version = "0.3.3", default-features = false, features = ["regular8x8"] }
-micromath = { version = "2.1.0", features = ["num-traits"] }
-postcard = { version = "1.1.1", features = ["alloc"] }
-serde = { version = "1.0.219", default-features = false }
-ssd1306 = { version = "0.10.0", features = ["async"] }
+micromath = "2.1.0"
+rtic = { version = "2.1.3", features = ["thumbv7-backend"] }
+# rtic-monotonics = { version = "2.0.3", features = ["stm32h750ib", "stm32_tim5"] }
+rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }
+rtic-sync = "1.3.2"
+serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
+serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
 static_cell = "2.1.0"
+stm32h7xx-hal = { path = "../stm32h7xx-hal", features = ["stm32h750v", "sdmmc-fatfs"] }
 tinyrand = "0.5.0"
-
-# tell rust-analyzer not to expect test crate
-[[bin]]
-name = "angry-surgeon-daisy"
-path = "src/main.rs"
-test = false
-doctest = false
-bench = false
-
-[dependencies.embedded-fatfs]
-git = "https://github.com/MabezDev/embedded-fatfs"
-default-features = false
-features = ["lfn"]
-
-[dependencies.embassy-stm32]
-path = "../embassy/embassy-stm32"
-# git = "https://github.com/embassy-rs/embassy"
-features = ["stm32h750ib", "time-driver-tim5", "exti", "unstable-pac"]
-
-[dependencies.embassy-sync]
-path = "../embassy/embassy-sync"
-# git = "https://github.com/embassy-rs/embassy"
-
-[dependencies.embassy-embedded-hal]
-path = "../embassy/embassy-embedded-hal"
-# git = "https://github.com/embassy-rs/embassy"
-
-[dependencies.embassy-executor]
-path = "../embassy/embassy-executor"
-# git = "https://github.com/embassy-rs/embassy"
-features = ["arch-cortex-m", "executor-thread", "executor-interrupt"]
-
-[dependencies.embassy-time]
-path = "../embassy/embassy-time"
-# git = "https://github.com/embassy-rs/embassy"
-# features = ["tick-hz-32_768"]
-
-[dependencies.embassy-usb]
-path = "../embassy/embassy-usb"
-# git = "https://github.com/embassy-rs/embassy"
-
-[dependencies.embassy-futures]
-path = "../embassy/embassy-futures"
-# git = "https://github.com/embassy-rs/embassy"
 
 [profile.release]
 strip = true
-lto = true
-opt-level = "s"
+lto = "fat"
+opt-level = "z"
 incremental = false
 codegen-units = 1
 debug = false
